deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seshat-book-author-service
  labels:
    app: seshat-book-author-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seshat-book-author-service
  template:
    metadata:
      labels:
        app: seshat-book-author-service
    spec:
      containers:
        - name: seshat-book-author-service
          image: gcr.io/seshat-417507/seshat-book-author-service:prod
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              port: 8080
              path: /api/v1/seshat-book-author-service/actuator/health
            initialDelaySeconds: 40
            periodSeconds: 10
          livenessProbe:
            httpGet:
              port: 8080
              path: /api/v1/seshat-book-author-service/actuator/health
            initialDelaySeconds: 40
            periodSeconds: 10
          resources:
            requests:
              cpu: "300m"
              memory: "400Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
