service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seshat-book-author-service
spec:
  selector:
    app: seshat-book-author-service
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
