ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seshat
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "ingress-webapps"
spec:
  ingressClassName: gce
  rules:
    - http:
        paths:
          - path: /api/v1/seshat-page-service
            pathType: Prefix
            backend:
              service:
                name: seshat-page-service test
                port:
                  number: 80
          - path: /api/v1/seshat-book-author-service
            pathType: Prefix
            backend:
              service:
                name: seshat-book-author-service
                port:
                  number: 80
          - path: /api/v1/seshat-book-category-service
            pathType: Prefix
            backend:
              service:
                name: seshat-book-category-service
                port:
                  number: 80
